# forth

./: CMakeLists.txt  forth.asm  forth_internals.ninc  nasm_string.ninc  shim.c
